<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title_sdp_control"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.03"
            android:background="@color/colorBlack"
            android:textColor="@color/colorYellow"
            android:text="@string/sdp_control" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.18"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_state"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/na"
                android:gravity="center"
                android:padding="10sp"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="20sp"
                android:autoSizeMaxTextSize="60sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_lock"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/lock" />
                <Button
                    android:id="@+id/btn_unlock"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/unlock" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title_db_status"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.03"
            android:background="@color/colorBlack"
            android:textColor="@color/colorYellow"
            android:text="@string/db_control" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.38"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_sub_data_num"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:background="@color/colorBeige"
                    android:text="@string/num_of_data" />
                <EditText
                    android:id="@+id/et_data_num"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:hint="Input # of Data"
                    android:ems="10"
                    android:inputType="number"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_insert"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/insert" />
                <Button
                    android:id="@+id/btn_select"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/select" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_delete"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/delete"/>
                <Button
                    android:id="@+id/btn_dump"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/dump"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_sub_interval"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:background="@color/colorBeige"
                    android:text="@string/interval" />
                <EditText
                    android:id="@+id/et_interval"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:hint="Input interval in second"
                    android:ems="10"
                    android:inputType="number"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_go"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/go"/>
                <Button
                    android:id="@+id/btn_stop"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/stop"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title_status"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.03"
            android:background="@color/colorBlack"
            android:textColor="@color/colorYellow"
            android:text="@string/status"/>

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.35"
            android:gravity="bottom"
            android:maxLines="200"
            android:text="Hello, my friend!\n" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>